--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body style="font-family: Arial; text-align: center; margin-top: 100px;">
     <h1>¡Hola desde Jenkins + Docker + Debian Agent!</h1>
-    <p>Si ves esto, el despliegue se hizo correctamente :)</p>
+    <p>Si ves esto, el despliegue se hizo correctamente y se actualiza cuando cambias algo en github:)</p>
   </body>
 </html>
